objects/ffct__MigrationSetProcessLog__c.object
<CustomObject>
    <customHelpPage>ffct__migrationsetonlinehelp</customHelpPage>
    <description>Holds the logs generated during Migration Set Job Processing</description>
    <fields>
        <fullName>ffct__ChangedById__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Changed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>MigrationSetProcessLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ffct__LogType__c</fullName>
        <description>Holds the log level. eg- Abort, Error, Information</description>
        <label>Log Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Abort</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
                <value>
                    <fullName>External</fullName>
                </value>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>WARN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ffct__Message__c</fullName>
        <description>Holds the log message.</description>
        <label>Message</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ffct__MigrationSetJob__c</fullName>
        <description>Holds the Migration Set Job on whose processing logs were generated.</description>
        <label>Migration Set Job</label>
        <referenceTo>ffct__MigrationSetJob__c</referenceTo>
        <relationshipLabel>Migration Set Process Logs</relationshipLabel>
        <relationshipName>MigrationSetProcessLogs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ffct__MigrationSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Holds Migration Set records associated with the logs.</description>
        <label>Migration Set</label>
        <referenceTo>ffct__MigrationSet__c</referenceTo>
        <relationshipLabel>Migration Set Process Logs</relationshipLabel>
        <relationshipName>MigrationSetProcessLogs</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Migration Set Process Log</label>
    <nameField>
        <displayFormat>MPSL-{0000}</displayFormat>
        <label>Migration Set Process Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Migration Set Process Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>